[package]
name = "physics_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opengl_render = {path="../opengl_render/"}
egui = {version = "0.16.0", default-features = false, features = [
    "convert_bytemuck",
    "single_threaded",
]}
rfd = "0.7.0"
rapier3d = "0.11.1"


